# EduThreat-CTI

./: .dockerignore  .env.example  .env.local.example  .gitignore  .railwayignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.v2-api  Dockerfile.v2-worker  LICENSE  RAILWAY_SETUP.md  README.md  SECURITY.md  VERSION_HISTORY.md  alembic.ini  pyproject.toml  railway.json  railway.v2-api.json  railway.v2-worker.json  requirements.txt  setup.py
.claude/: settings.json
.github/workflows/: ci.yml  llm-eval.yml
alembic/: env.py
alembic/versions/: 20250509_0001_create_v2_schema.py  20250509_0002_add_v2_reenrich_fields.py  20250509_0003_add_orchestrate_plan_task_type.py  20250509_0004_expand_v2_canonical_membership_match_types.py  20260510_0005_add_v2_research_metric_snapshots.py  20260521_0006_allow_exact_identity_same_event_match_type.py  20260523_0007_add_campaign_correlation_tables.py  20260607_0008_add_star_schema_analytical_layer.py  20260611_0009_add_title_relevance_gate.py  20260611_0010_fix_classify_titles_check_constraint.py
data/: bakeoff_results.json  eduthreat.db
docs/: ACM_CCS_PAPER_GUIDE.md  ADDING_SOURCES.md  ANALYST_GUIDE.md  API.md  ARCHITECTURE.md  DATABASE.md  DATABASE_CONCURRENCY.md  DATA_DICTIONARY.md  DEDUPLICATION.md  ENV_MIGRATION.md  FUTURE_CTI_WORK.md  FUTURE_WORK.md  LOCAL_V2_RUNTIME.md  LOGGING.md  PATHS_AND_STORAGE.md  PIPELINE_VERIFICATION.md  POSTGRES_V2_BLUEPRINT.md  RAILWAY_V2_DEPLOY.md  RAW_DIRECTORY.md  README.md  RESEARCHER_GUIDE.md  SCRAPLING_RUNTIME_NOTES.md  SOURCES.md  URL_SCHEMA.md  V2_RUNTIME.md  postgres_v2_schema.sql
evals/: README.md  build_gold.py  metrics.py  run_eval.py
evals/gold/: extractions.jsonl  hardcases_extractions.jsonl  hardcases_titles.jsonl  titles.jsonl
evals/reports/: RESULTS.md
paper/: main.tex  references.bib
scripts/: fix_incident_dates.py  llm_bakeoff.py  local_v2_stack.sh  manual_v2_oxylabs_check.py  migrate_db_to_railway.py  repair_corrupted_incidents.py  setup.py  test_instructor_live.py
src/edu_cti/analysis/: __init__.py  campaign_correlation.py  campaign_feature_prompt.md
src/edu_cti/api/: __init__.py  __main__.py  admin.py  cache.py  database.py  main.py  models.py  reports.py  schema_docs.py  v2.py  v2_admin.py
src/edu_cti/config/: edu_keywords.json
src/edu_cti/core/: __init__.py  actor_identity.py  config.py  countries.py  date_parsing.py  db.py  deduplication.py  discovery_policy.py  fuzzy_dedup.py  http.py  ioc_extractor.py  logging_utils.py  metrics.py  models.py  oxylabs.py  pagination.py  proxy.py  sources.py  timeouts.py  translator.py  utils.py  vpn.py
src/edu_cti/pipeline/: data_quality.py  manager.py  orchestrator.py
src/edu_cti/scheduler/: __init__.py  scheduler.py
src/edu_cti/sources/: __init__.py  news_query_audit_cli.py
src/edu_cti/tools/: cleanup_ioc_incidents.py  dedup_existing_incidents.py  find_duplicates.py  rescue_securityweek.py
src/edu_cti_v2/: __init__.py  __main__.py  api_app.py  api_server.py  auth.py  controlled_vocab.py  env.py  export.py  migrate.py  normalization.py  orchestrator_cli.py  phase1_dual_write.py  preflight_cli.py  reset_db.py  resource_limits.py  runtime.py  scheduler.py  source_health_cli.py  source_identity.py  worker.py
src/edu_cti_v2/db/: __init__.py  base.py  config.py  connection.py  schema.sql
src/edu_cti_v2/models/: __init__.py  article.py  (+7 more)
tests/: README.md  __init__.py  conftest.py  test_actor_identity.py  test_api_field_coercion.py  test_api_health.py  test_campaign_correlation.py  test_dashboard_stats.py  test_date_extraction.py  test_db_retry.py  test_degenerate_output.py  test_e2e_pipeline.py  test_env.py  test_full_field_audit.py  test_instructor_e2e.py  test_logging.py  test_mapper_field_coverage.py  test_metrics.py  test_paid_rss_ingestion.py  test_pipeline_manager.py  test_pipeline_orchestrator.py  test_source_timeout.py  test_split_extraction.py  test_utils.py
tests/evals/: test_gold_schema.py  test_metrics.py
tests/phase1/: __init__.py  test_api_sources.py  test_csv_output.py  test_darkreading.py  test_deduplication.py  test_googlenews_rss.py  test_incremental_save.py  test_international_rss.py  test_models.py  test_news_query_variants.py  test_oxylabs_news.py  test_phase1_main.py  test_pipeline.py  test_rss_pipeline.py  test_source_contribution.py  test_thehackernews.py  test_therecord.py  test_title_classify_keyword_gate.py
tests/phase2/: README.md  __init__.py  test_comprehensive_llm_extraction.py  test_enrichment_coverage.py  test_extraction_pipeline_fixes.py  test_field_coverage.py  test_instructor_corrector.py  test_llm_response_validation.py  test_memory_policy.py  test_new_fields_pipeline.py  test_phase2_deduplication.py  test_phase2_enrichment.py  test_phase2_llm_client.py  test_post_processing.py  test_serp_url_persistence.py  test_split_extraction_routing.py
tests/v2/: test_api_security.py  test_campaign_traced_graph.py  test_controlled_vocab.py  test_export.py  test_extraction_quality_fixes.py  test_phase1_dual_write.py  test_resource_limits.py  test_star_projection.py  test_v2_admin_api.py  test_v2_analytics_service.py  test_v2_api.py  test_v2_api_app.py  test_v2_canonicalization_service.py  test_v2_collection_service.py  test_v2_data_quality_service.py  test_v2_db_config.py  test_v2_enrichment_service.py  test_v2_fetch_service.py  test_v2_intake_service.py  test_v2_metadata.py  test_v2_migrate.py  test_v2_normalization.py  test_v2_operations_service.py  test_v2_orchestration_service.py  test_v2_orchestrator_cli.py  test_v2_preflight_cli.py  test_v2_preflight_service.py  test_v2_purge_non_education.py  test_v2_read_models.py  test_v2_repositories.py  test_v2_reset_db.py  test_v2_resolution_service.py  test_v2_runtime.py  test_v2_scheduler_service.py  test_v2_source_identity.py  test_v2_structured_victim_trust.py  test_v2_task_runtime.py  test_v2_title_classification.py  test_v2_worker.py  test_worker_memory.py
tests/wazuh/: test_export_threat_feed.py
wazuh/: README.md  docker-compose.yml  export_threat_feed.py
wazuh/rules/: eduthreat_intel_rules.xml  eduthreat_ops_rules.xml
(+103 files in other folders)
