[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduthreat-cti"
version = "1.5.0"
description = "Real-time cyber threat intelligence pipeline for the global education sector"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "EduThreat-CTI Contributors"}
]
keywords = ["cybersecurity", "threat-intelligence", "education", "OSINT", "CTI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Education",
]

dependencies = [
    "lxml>=4.9.0",
    "tldextract>=5.0.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "undetected-chromedriver>=3.5.0",
    "selenium>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
eduthreat-phase1 = "src.edu_cti.pipeline.phase1.__main__:main"
eduthreat-phase2 = "src.edu_cti.pipeline.phase2.__main__:main"
eduthreat-orchestrator = "src.edu_cti.pipeline.phase1.orchestrator:main"
eduthreat-build = "src.edu_cti.pipeline.phase1.build_dataset:main"

[tool.setuptools]
packages = ["src.edu_cti"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

