[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduthreat-cti"
version = "2.7.1"
description = "Real-time cyber threat intelligence pipeline for the global education sector"
readme = {text = "Real-time cyber threat intelligence pipeline for the global education sector", content-type = "text/plain"}
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "EduThreat-CTI Contributors"}
]
keywords = ["cybersecurity", "threat-intelligence", "education", "OSINT", "CTI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Education",
]

dependencies = [
    # Core HTTP & scraping
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",

    # Advanced bot evasion
    "curl_cffi>=0.7.0",
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
    "scrapling>=0.4.8",
    "browserforge>=1.2.4",
    "apify_fingerprint_datapoints>=0.13.0",
    "msgspec>=0.19.0",
    "patchright>=1.59.1",

    # Data processing
    "tldextract>=5.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "schedule>=1.2.0",

    # Article extraction
    "newspaper3k>=0.2.8",
    "lxml_html_clean>=0.1.0",

    # LLM enrichment
    "ollama>=0.3.0",
    "instructor>=1.0.0",

    # CTI enrichment
    "stix2>=3.0.0",
    "gliner>=0.2.0",
    "sentence-transformers>=3.0.0",
    "psutil>=5.9.0",

    # Structured logging
    "structlog>=24.1.0",

    # API server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
extras = [
    # Multi-language support
    "deep-translator>=1.11.0",
    "langdetect>=1.0.9",
    # Enhanced deduplication
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
    # Brotli compression
    "brotli>=1.1.0",
]

[project.scripts]
eduthreat-phase1 = "src.edu_cti.pipeline.phase1.__main__:main"
eduthreat-phase2 = "src.edu_cti.pipeline.phase2.__main__:main"
eduthreat-orchestrator = "src.edu_cti.pipeline.orchestrator:main"
eduthreat-build = "src.edu_cti.pipeline.phase1.build_dataset:main"
eduthreat-api = "src.edu_cti_v2.api_server:main"
eduthreat-v2-api = "src.edu_cti_v2.api_server:main"
eduthreat-v2-worker = "src.edu_cti_v2.worker:main"
eduthreat-v2-scheduler = "src.edu_cti_v2.scheduler:main"
eduthreat-v2-runtime = "src.edu_cti_v2.runtime:main"
eduthreat-v2-migrate = "src.edu_cti_v2.migrate:main"
eduthreat-v2-reset-db = "src.edu_cti_v2.reset_db:main"
eduthreat-v2-preflight = "src.edu_cti_v2.preflight_cli:main"
eduthreat-v2-run-plan = "src.edu_cti_v2.orchestrator_cli:main"
eduthreat-v2-source-health = "src.edu_cti_v2.source_health_cli:main"
eduthreat-v2-build-star = "src.edu_cti_v2.services.star_projection:main"
eduthreat-v2-export = "src.edu_cti_v2.export:main"
eduthreat-news-query-audit = "src.edu_cti.sources.news_query_audit_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.edu_cti" = ["config/*.json"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
